# nekofetch

./: Cargo.toml  LICENSE  README.md
src/: ascii_art.rs  config.rs  display.rs  main.rs  system_info.rs
