[package]
name = "nekofetch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nekofetch"
path = "src/main.rs"

[dependencies]
colored = "2.1.0"
sysinfo = "0.32.0"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.21", features = ["derive"] }
serde_yml = "0.0.12"
whoami = "1.5.2"
toml = "0.8.19"
rand = "0.8.5"
dirs = "5.0.1"
